--- a/myapp/client/src/Styles/ScoreBoard.css
+++ b/myapp/client/src/Styles/ScoreBoard.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     flex-flow: column;
-    max-width: 40%;
+    max-width: 50%;
     -webkit-box-shadow: 2.5px 2.5px 5px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 2.5px 2.5px 5px 0px rgba(0,0,0,0.5);
     box-shadow: 2.5px 2.5px 5px 0px rgba(0,0,0,0.5);
